--- a/Practice/navbar-own-2/style.css
+++ b/Practice/navbar-own-2/style.css
@@ -19,14 +19,12 @@ nav{
     justify-content: flex-end;
     align-items: center;
 }
-nav p{
-    color:var(--text-color);
-}
 .links-container{
     height: 100%;
     width: 100%;
     display: flex;
     flex-direction: row;
+    justify-content: flex-end;
     align-items: center;
 }
 
@@ -64,6 +62,7 @@ nav svg{
 @media(max-width:550px){
     .links-container{
         flex-direction: column;
+        justify-content: flex-start;
         align-items: flex-start;
         position: fixed;
         top:0;
@@ -72,9 +71,6 @@ nav svg{
         width:300px;
         background-color: var(--color-1);
         transition: 0.75s ease-out;
-    }
-    nav p{
-        
     }
     nav a{
         box-sizing: border-box;
