--- a/notes-app/templates/edit.html
+++ b/notes-app/templates/edit.html
@@ -38,7 +38,7 @@ endblock %} {% block main %}
     <table align="center">
       <tr>
         <td>
-          <button type="submit" class="btn btn-outline-primary">Update</button>
+          <button type="submit" class="btn btn-outline-dark">Update</button>
         </td>
       </tr>
     </table>
