--- a/Vendor-App-complete/templates/master/master-logged-in.html
+++ b/Vendor-App-complete/templates/master/master-logged-in.html
@@ -21,15 +21,13 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarText">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="/">Search</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/list">All</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/create">Add</a>
-              </li>
+              {% for item in [{'link':'/','text':'Search','name':'Search'},
+                              {'link':'/list','text':'All','name':'All'},
+                              {'link':'/create','text':'New','name':'New'}] %}
+                <li class="nav-item">
+                  <a class="nav-link {% if ((menu) and (menu==item.name)) %}active{% endif %}" href="{{ item.link }}">{{ item.text }}</a>
+                </li>
+              {% endfor %}
             </ul>
             <div class="d-flex align-items-center" role="search">
                 <p class="text-info mb-0 me-2">Welcome Kunaal 😊</p>&nbsp;
